tests/fixtures/invalid/block_aggregate_typedef_alias_out_of_scope.c
int main(void) {
    {
        typedef struct Hidden {
            int value;
        } Hidden;
        Hidden h = {1};
    }
    struct Hidden leaked;
    return 0;
}
